--- a/DataApp/Views/Shared/Editor.cshtml
+++ b/DataApp/Views/Shared/Editor.cshtml
@@ -6,17 +6,22 @@
 }
 
 <form asp-action="@(ViewBag.CreateMode ? "Create" : "Edit")" methode="post">
+    <input name="original.Id" value="@Model?.Id" type="hidden" />
+    <input name="original.Name" value="@Model?.Name" type="hidden" />
+    <input name="original.Category" value="@Model?.Category" type="hidden" />
+    <input name="original.Price" value="@Model?.Price" type="hidden" />
+
     <div class="form-group">
         <label asp-for="Name"></label>
         <input asp-for="Name" class="form-control" />
     </div>
     <div class="form-group">
         <label asp-for="Category"></label>
-        <input asp-for="Category" class="form-control"  />
+        <input asp-for="Category" class="form-control" />
     </div>
     <div class="form-group">
         <label asp-for="Price"></label>
-        <input asp-for="Price" class="form-control"  />
+        <input asp-for="Price" class="form-control" />
     </div>
 
     <div class="text-center">
